[package]
name = "seansemble"
version = "0.1.0"
edition = "2021"
authors = [
    "Sean Friedowitz"
]
license = "MIT"

[lib]
name = "seansemble"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
rand_distr="0.4"
itertools = "0.10"
float-cmp = "0.9"
num = "^0.4"
nalgebra = "0.31"
thiserror = "1.0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "seansemble-bench"
harness = false
path = "benches/lib.rs"